# SkyBank_project

./: .env.example  README.md  pyproject.toml
data/: operations.xlsx
src/: read_excel.py  utils.py  views.py
tests/: test_read_excel.py  test_utils.py  test_views.py
